; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_video.c_GetVout.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_video.c_GetVout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [24 x i8] c"Video output not active\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i64)* @GetVout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @GetVout(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  store i32* null, i32** %5, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i32** @GetVouts(i32* %9, i64* %6)
  store i32** %10, i32*** %7, align 8
  %11 = load i32**, i32*** %7, align 8
  %12 = icmp eq i32** %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  br label %48

14:                                               ; preds = %2
  %15 = load i64, i64* %4, align 8
  %16 = load i64, i64* %6, align 8
  %17 = icmp ult i64 %15, %16
  br i1 %17, label %18, label %23

18:                                               ; preds = %14
  %19 = load i32**, i32*** %7, align 8
  %20 = load i64, i64* %4, align 8
  %21 = getelementptr inbounds i32*, i32** %19, i64 %20
  %22 = load i32*, i32** %21, align 8
  store i32* %22, i32** %5, align 8
  br label %23

23:                                               ; preds = %18, %14
  store i64 0, i64* %8, align 8
  br label %24

24:                                               ; preds = %39, %23
  %25 = load i64, i64* %8, align 8
  %26 = load i64, i64* %6, align 8
  %27 = icmp ult i64 %25, %26
  br i1 %27, label %28, label %42

28:                                               ; preds = %24
  %29 = load i64, i64* %8, align 8
  %30 = load i64, i64* %4, align 8
  %31 = icmp ne i64 %29, %30
  br i1 %31, label %32, label %38

32:                                               ; preds = %28
  %33 = load i32**, i32*** %7, align 8
  %34 = load i64, i64* %8, align 8
  %35 = getelementptr inbounds i32*, i32** %33, i64 %34
  %36 = load i32*, i32** %35, align 8
  %37 = call i32 @vout_Release(i32* %36)
  br label %38

38:                                               ; preds = %32, %28
  br label %39

39:                                               ; preds = %38
  %40 = load i64, i64* %8, align 8
  %41 = add i64 %40, 1
  store i64 %41, i64* %8, align 8
  br label %24

42:                                               ; preds = %24
  %43 = load i32**, i32*** %7, align 8
  %44 = call i32 @free(i32** %43)
  %45 = load i32*, i32** %5, align 8
  %46 = icmp eq i32* %45, null
  br i1 %46, label %47, label %50

47:                                               ; preds = %42
  br label %48

48:                                               ; preds = %47, %13
  %49 = call i32 @libvlc_printerr(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  br label %50

50:                                               ; preds = %48, %42
  %51 = load i32*, i32** %5, align 8
  ret i32* %51
}

declare dso_local i32** @GetVouts(i32*, i64*) #1

declare dso_local i32 @vout_Release(i32*) #1

declare dso_local i32 @free(i32**) #1

declare dso_local i32 @libvlc_printerr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
